# python-sentiment-analysis

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/sentiment_analysis/: main.py
src/sentiment_analysis/core/: filter.py
src/sentiment_analysis/extension/commit/: __init__.py  filters.py
src/sentiment_analysis/transformer/: torch.py
